kubernetes/backend-service.yaml
  apiVersion: v1
  kind: Service
  metadata:
    name: backend-service
    namespace: killer-app
  spec:
    selector:
      app: backend
    ports:
      - protocol: TCP
        port: 5000        
        targetPort: 5000  
    type: ClusterIP
