kubernetes/ingress-k3s.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: killer-app-ingress
  namespace: killer-app
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: interview-app.local
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend-service
              port:
                number: 80
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: backend-service
              port:
                number: 5000
